[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.82"
async-trait = "0.1.80"
derive_more = "0.99.17"
json = "0.12.4"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
surrealdb = "1.4.2"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
uuid = "1.8.0"
validator = { version = "0.18.1", features = ["derive"] }
