workspace = { members = ["src/minibash"] }
[package]
name = "front"
version = "0.1.0"
authors = ["LilDojd <yawner@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5.1", features = ["web", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
dioxus-spline = "0.2.0"
rustyline = "14.0.0"
